--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name":"gifted-md@4.0.0",
-  "description":"A MultiDevice WhatsApp Bot Created by Gifted Tech",
+  "name":"Astabot",
+  "description":"A MultiDevice WhatsApp Bot Created by Asta ichiyukimori",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://telegra.ph/file/a202f454c9532c3f5b7f8.jpg",
   "repository":"https://github.com/mouricedevs/Gifted-Md",
@@ -42,7 +42,7 @@
     "BOT_NAME" : {
 
       "description":"put A name for your bot",
-      "value":"GIFTED-MD",
+      "value":"Asta-bot",
       "required":false
 
     } ,
@@ -56,7 +56,7 @@
     "PUBLIC_MODE":
     {
       "description":"type yes to put your bot on public mode or no to put it on private mod",
-      "value":"no",
+      "value":"yes",
       "required":false
     }
         ,
@@ -79,11 +79,11 @@
     "OWNER_NAME":
     {
 
-    "desc": "Your Name",
+    "desc": "owners-name",
     "required": false,
-    "value": "Gifted Tech"
+    "value": "asta-ichiyukimori"
   },
-    "OWNER_NUMBER":
+    "OWNER_NUMBER": 09078571605
   {
 
     "desc": "Your number , dont put '+' and put you area code(exemple of togo '228')",
@@ -100,7 +100,7 @@
     {
       "desc": "Put yes to allow the bot to chat with people who text you or put no if you don't want the bot to chat with people",
       "required": false, 
-       "value": "no" 
+       "value": "yes" 
     }, 
   "STARTING_BOT_MESSAGE":
   {
